Change Email Send Feature to avoid policy and files upload location