@@ -2,6 +2,7 @@ package com.br.data;
 
 import java.io.InputStream;
 import java.util.Base64;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.sql.ResultSet; // <--- สำคัญตรงนี้
@@ -2871,16 +2872,19 @@ public class InsertData {
 		String data = SelectData.getSTATUSIDSWRQ(Maxno.toString(), comcono, comdivi);
 		System.out.println("test");
 		String url = "https://workflow.br-bangkokranch.com/webhook/savesoftware_req";
+//		String url = "https://workflow.br-bangkokranch.com/webhook-test/tst/savesoftware_req";
 		//createsupplier
 
 		String response = HttpConnection.sendRequest(
 				"POST",
 				url,
-				Map.of("x-access-token",
+				Collections.singletonMap("x-access-token",
 						"eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiIxMCA6IDEwMSA6IOC4muC4o-C4tOC4qeC4seC4lyDguJrguLLguIfguIHguK3guIHguYHguKPguYnguJnguIrguYwg4LiI4Liz4LiB4Lix4LiUICjguKHguKvguLLguIrguJkpIiwiaXNzIjoiYXV0aGVuLXNlcnZpY2UiLCJhdWQiOiIwMTAyOTA2Iiwicm9sZSI6Ik1QTV8xQTEgOiBBUFBST1ZFIDogU0FMRU1BTiA6IDAiLCJleHAiOjE3NTAxNzY1NzF9.cAMs1gdcg3cxfYNTJi_WTHpBCKDxaw-MjwrDpmFPPSo"), // headers
 				data,
 				null // form-data
 		);
+		
+		
 		
 		logger.debug("vVersion: " + version);
 		
